# lmms-engine

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
cicd/: README.md  run_traincicd.sh
docs/: README.md  data_prep.md  datasets.md  index.rst  new_model_guide.md  new_trainer_guide.md  train.md  video_configuration.md
docs/developer_guide/: index.rst
docs/getting_started/: train.md
docs/models/: bagel.md  index.rst  qwenvl.md
docs/reference/: design_principle.md  index.rst  mfu.md
docs/user_guide/: data_prep.md  index.rst
examples/: config_example.yaml  load_from_config_example.yaml  load_from_pretrained_example.yaml  muon_DGN_1B_from_scratch.yaml  run.sh
examples/bagel/: example_config.yaml
examples/dgn/: run.sh
examples/diffusion_language_model/: run.sh
examples/ds_config/: default_config.json
examples/qwen2_5_omni/: example_config.yaml  run.sh
examples/qwen3_vl/: run.sh
examples/representation_autoencoder/: reconstruct.py
examples/scalable_interpolant_transformer/: run.sh
examples/vanila_dllm/: README.md  dllm_train_adam_multi_gpu_deepspeed.yaml  dllm_train_muon_single_gpu.yaml  run_multigpu copy.sh
examples/wanvideo/: run.sh
examples/wanvideo/configs/: wan2.2_ti2v_5b_from_pretrained.yaml  wan2.2_ti2v_5b_from_scratch.yaml
src/lmms_engine/: mapping_func.py
src/lmms_engine/datasets/: __init__.py  base_dataset.py  config.py  multimodal_dataset.py  multimodal_mixin.py  vision_dataset.py
src/lmms_engine/datasets/collator/: __init__.py  bagel_collator.py  text_dllm_collator.py  vision_collator.py
src/lmms_engine/datasets/iterable/: __init__.py  fineweb_edu_dataset.py  multimodal_iterable_dataset.py  qwen3_vl_iterable_dataset.py  qwen_omni_iterable_dataset.py  vision_iterable_dataset.py
src/lmms_engine/datasets/naive/: __init__.py  multimodal_dataset.py  qwen_omni_dataset.py  vision_audio_dataset.py  vision_dataset.py
src/lmms_engine/datasets/processor/: __init__.py  aero_omni_processor.py  aero_processor.py  (+11 more)
src/lmms_engine/launch/: cli.py
src/lmms_engine/models/: __init__.py  config.py  modeling_qwen.py  monkey_patch.py  sequence_packing_utils.py  utils.py
src/lmms_engine/protocol/: args.py
src/lmms_engine/train/: __init__.py  base_trainer.py  config.py  dllm_trainer.py  fsdp2_trainer.py  hf_trainer.py  registry.py  runner.py  trainer.py  wan_trainer.py
src/lmms_engine/utils/: config_loader.py  data_utils.py  fsdp2_utils.py  muon_utils.py  profiler.py  tracking.py  train_utils.py
test/: run_suite.py
test/train/: run_cicd.py
test/train/bagel/: train_bagel.py
test/train/llava_onevision/: test_llava_onevision.py  train_llava_onevision.py
test/train/qwen2_5/: test_qwen2_5.py  train_qwen2_5.py  train_qwen2_5_iterable.py  train_qwen2_5_sp.py
test/train/qwen2_5_vl/: train_qwen2_5_vl.py  train_qwen2_5_vl_sp.py
test/train/qwen2d5/: test_qwen2d5.py  train_qwen2.5.py  train_qwen2.5_iterable.py  train_qwen2.5_sp.py
test/train/qwen2d5_vl/: test_qwen2d5_vl.py  train_qwen2.5_vl.py  train_qwen2.5_vl_sp.py
test/train/qwen3_vl/: train_qwen3_vl.py
tools/: merge_fsdp.py
tools/check_data/: check_dataset_tokens.py  check_dataset_tokens_cloud.py  check_dataset_yaml.py  precompute_tokens.py  precompute_tokens_cloud.py
tools/generate_config/: generate_default_yaml.py
tools/prepare_init_weight/: prepare_rae_siglip2.py
(+92 files in other folders)
